Bug 491488 - Cell copied from LibreOffice Calc gets data shown in KWin debug console, but it never makes it to Klipper
Summary: Cell copied from LibreOffice Calc gets data shown in KWin debug console, but ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.1.3
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
: 464903 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-09 14:40 UTC by Nate Graham
Modified: 2024-12-13 01:22 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-08-09 14:40:52 UTC
Everything KDE from today's git master, built against Qt 6.7.2 on top of Fedora KDE 40


STEPS TO REPRODUCE
1. Open KWin debug console and go to the Clipboard tab
2. Open Klipper widget and pin it open
3. Open LibreOffice Calc (24.2.5.2, KF6 VCL backend, native Wayland window)
2. Write the text "5" in a cell (of anything, really)
3. Select the cell and copy it


OBSERVED RESULT
A ton of stuff shows up in KWin debug console, including the copied text for the "text/plain" mimetype. But nothing shows up in Klipper.


EXPECTED RESULT
The copied text shows up in Klipper.


ADDITIONAL INFORMATION
Same issue seen with primary selection.

Same issue if you copy or select the text within the cell, not the entire cell.
Comment 1 Bug Janitor Service 2024-08-23 16:16:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4638
Comment 2 Fushan Wen 2024-08-23 17:01:20 UTC
Git commit 90a85213b081086c44e32330b8507aea0400082e by Fushan Wen.
Committed on 23/08/2024 at 16:42.
Pushed by fusionfuture into branch 'master'.

appiumtests: test bug 491488

M  +15   -1    appiumtests/applets/clipboardtest.py

https://invent.kde.org/plasma/plasma-workspace/-/commit/90a85213b081086c44e32330b8507aea0400082e
Comment 3 Fushan Wen 2024-08-23 17:01:28 UTC
Git commit b83bc9a076fc0ae091f0df1eddce84d0d1dea5fd by Fushan Wen.
Committed on 23/08/2024 at 16:13.
Pushed by fusionfuture into branch 'master'.

klipper: fix copying cells when images are ignored

When copying a cell to the clipboard, both the image and the plain text
will be copied, and the plain text should be saved to the history when
images are ignored.
FIXED-IN: 6.1.5

M  +1    -1    klipper/klipper.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b83bc9a076fc0ae091f0df1eddce84d0d1dea5fd
Comment 4 Fushan Wen 2024-08-23 17:27:18 UTC
Git commit fead4fa8174aeb6e61354390e9ddee4627b31166 by Fushan Wen.
Committed on 23/08/2024 at 17:03.
Pushed by fusionfuture into branch 'Plasma/6.1'.

klipper: fix copying cells when images are ignored

When copying a cell to the clipboard, both the image and the plain text
will be copied, and the plain text should be saved to the history when
images are ignored.
FIXED-IN: 6.1.5


(cherry picked from commit b83bc9a076fc0ae091f0df1eddce84d0d1dea5fd)

Co-authored-by: Fushan Wen <qydwhotmail@gmail.com>

M  +1    -1    klipper/klipper.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/fead4fa8174aeb6e61354390e9ddee4627b31166
Comment 5 Fushan Wen 2024-12-13 01:22:57 UTC
*** Bug 464903 has been marked as a duplicate of this bug. ***