klipper: fix copying cells when images are ignored

When copying a cell to the clipboard, both the image and the plain text
will be copied, and the plain text should be saved to the history when
images are ignored.

BUG: 491488
FIXED-IN: 6.1.5


(cherry picked from commit b83bc9a076fc0ae091f0df1eddce84d0d1dea5fd)

Co-authored-by: Fushan Wen <qydwhotmail@gmail.com>